--- a/ICD10.API/ICD10.API.csproj
+++ b/ICD10.API/ICD10.API.csproj
@@ -9,6 +9,8 @@
     <Folder Include="wwwroot\" />
     <Folder Include="Filters\" />
     <Folder Include="Exceptions\" />
+    <Folder Include="Lib\CodesMapping\" />
+    <Folder Include="Lib\Utils\" />
   </ItemGroup>
 
   <ItemGroup>
