--- a/ICD10.API/appsettings.Development.json
+++ b/ICD10.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=icd10_dev;UserId=icd10;Password=icd10"
+    "DefaultConnection": "Server=localhost;Database=elite_icd_api;UserId=icd;Password=icd"
   },
   "Logging": {
     "LogLevel": {
